--- a/Test3/app/src/main/res/values/strings.xml
+++ b/Test3/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="description_info">Info</string>
     <string name="permission_request">This sample needs permission for camera and audio recording.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
-    <string name="app_name">Camera2Video</string>
+    <string name="app_name">Cola</string>
     <string name="intro_message">
         <![CDATA[
 
